--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Python
+__pycache__/
+*.pyc
+venv/
+env*/
+
+# Jupyter Notebooks
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+.ipynb*
+notebooks/
+
+# Project Data & Outputs
 pdf_image_extraction_dataset/
 pdf_image_extraction_dataset.zip
 dataset/
@@ -6,18 +19,23 @@ extraction_time.txt
 xp1/
 xp2/
 xp1_and_xp2/
-.ipynb*
 selected_figures/
-panel_extraction_src/
 xfigs/
 panel_dataset/
 panels_mask/
 xcaps/
 figures/
-caption_extraction/
 copy-move-data/
-venv/
+output/
+
+# Legacy / External Source
+panel_extraction_src/
+caption_extraction/
 scripts/
 src2/
 test/
-__pycache__/
+
+# IDE / OS
+.vscode/
+.idea/
+.DS_Store
